<resources>
    <string name="app_name">TP_4_GRUPO_4</string>
    <string name="alta">ALTA</string>
    <string name="modificacion">MODIFICACIÓN</string>
    <string name="listado">LISTADO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categoria">Categoria</string>
    <string name="idAlta">ID</string>
    <string name="nombre_prod">Nombre Producto</string>
    <string name="stock">Stock</string>
    <string name="agregar">Agregar</string>
    <string name="modificar">Modificar</string>
    <string name="buscar">Buscar</string>
    <string name="ingreseunproducto">Ingrese un nuevo producto</string>
    <string name="idBuscado">_____</string>
</resources>